# embedded

./: .gitignore  README.md
pacs/stm32f103_pac/src/: afio.rs  can1.rs  dbg.rs  ethernet_dma.rs  ethernet_ptp.rs  flash.rs  gpioa.rs  iwdg.rs  lib.rs  rcc.rs  stk.rs  tim10.rs  tim6.rs  wwdg.rs
stm32-study/: Cargo.toml  openocd.gdb
stm32-study/src/: main.rs
stm32f103_pac/: Cargo.toml
stm32f103_pac/src/: bkp.rs  dac.rs  dma1.rs  ethernet_mac.rs  ethernet_mmc.rs  fsmc.rs  nvic_stir.rs  pwr.rs  rtc.rs  scb_actrl.rs  sdio.rs  tim1.rs  uart5.rs  usb.rs
stm32f103_pac/src/adc1/: cr1.rs  smpr1.rs
stm32f103_pac/src/afio/: evcr.rs  exticr2.rs  mapr.rs
stm32f103_pac/src/bkp/: csr.rs  dr1.rs  dr10.rs  dr12.rs  dr14.rs  dr15.rs  dr16.rs  dr19.rs  dr20.rs  dr26.rs  dr28.rs  dr29.rs  dr32.rs  dr33.rs  dr38.rs  dr4.rs  dr40.rs  dr42.rs  dr7.rs
stm32f103_pac/src/can1/: can_esr.rs  can_fm1r.rs  can_fmr.rs  can_mcr.rs  can_rdh0r.rs  can_rdh1r.rs  can_rdl0r.rs  can_rdl1r.rs  can_rdt1r.rs  can_tdh0r.rs  can_tdh2r.rs  can_tdl0r.rs  can_ti2r.rs  can_tsr.rs  f0r1.rs  f0r2.rs  f10r1.rs  f10r2.rs  f12r2.rs  f13r1.rs  f1r1.rs  f1r2.rs  f2r1.rs  f2r2.rs  f4r2.rs  f6r1.rs  f8r1.rs  f9r1.rs
stm32f103_pac/src/dac/: cr.rs  dhr12l1.rs  dhr12l2.rs  dhr12rd.rs  dhr8rd.rs  dor2.rs
stm32f103_pac/src/dbg/: idcode.rs
stm32f103_pac/src/dma1/: ccr1.rs  ccr4.rs  ccr6.rs  ccr7.rs  cmar2.rs  cmar5.rs  cndtr1.rs  cndtr3.rs  cndtr4.rs  cndtr5.rs  cpar1.rs  cpar2.rs  cpar3.rs  cpar4.rs  cpar6.rs  ifcr.rs  isr.rs
stm32f103_pac/src/ethernet_dma/: dmabmr.rs  dmachrbar.rs  dmachtdr.rs  dmamfbocr.rs  (+3 more)
(+276 files in other folders)
