[package]
authors = ["Diego"]
edition = "2018"
readme = "README.md"
name = "stm32-study"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
stm32f103_pac = { path = "../stm32f103_pac", version = "0.1.0", features = ["critical-section"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

#embedded-hal = "0.2.7"
#nb = "1"
#
#[dependencies.stm32f1xx-hal]
#version = "0.10.0"
#features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-study"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
